# ubuntu-setup

./: README.md  pyproject.toml  setup.py
ubuntu_setup/: __init__.py  utils.py
ubuntu_setup/apps/: docker_desktop.py
ubuntu_setup/commands/: __init__.py  apps.py  apt.py  git.py  pyenv.py  signal.py  spotify.py  zsh.py
